--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "jalaali-js": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/node": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.13",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^26.6.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "dayjs": "1.10.4",
-    "eslint": "^7.20.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-jest": "^24.3.2",
     "jest": "^26.6.3",
     "luxon": "^1.3.0",
-    "mockdate": "^3.0.2",
-    "rollup": "^2.39.1",
+    "mockdate": "^3.0.5",
+    "rollup": "^2.43.1",
     "rollup-plugin-babel": "^4.0.0-beta.5",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
