--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn build
-      - run: yarn test
+      - run: npm ci
+      - run: npm test
 
   publish-npm:
     needs: build
@@ -27,8 +27,8 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: yarn build
-      - run: yarn publish
+      - run: npm ci
+      - run: npm test
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
