--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "Jalali calendar plugin for dayjs",
   "main": "jalali-dayjs.min.js",
-  "repository": "https://github.com/siolishe/jalali-dayjs.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/siolishe/jalali-dayjs.git"
+  },
   "author": "Kasra Soleymani <siolihe@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -48,5 +51,12 @@
       "test"
     ],
     "testRegex": "test/(.*?/)?.*test.js$"
+  },
+  "bugs": {
+    "url": "https://github.com/siolishe/jalali-dayjs/issues"
+  },
+  "homepage": "https://github.com/siolishe/jalali-dayjs#readme",
+  "directories": {
+    "test": "test"
   }
 }
